app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

/*Секция с курсами*/
.course__grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 50px;
}
.course__item {
    min-width: 400px;
    min-height: 300px;
    border: 2px solid #f2f3f6;
    display: flex;
    flex-direction: column;
    gap: 15px;
    position: relative;
    padding: 25px 20px;
    border-radius: 10px;
    box-shadow: 0 0 50px -10px rgba(0, 0, 0, 0.2);
}
.course__categories {
    font-size: .7rem;
}
.category {
    color: #9283e6;
    border: 1px solid #9283e6;
    border-radius: 5px;
    text-transform: uppercase;
    padding: 10px 20px;
    margin-right: 20px;
}
.course__free {
    background-color: #ea922c;
    text-transform: uppercase;
    border-radius: 5px;
    color: #ffffff;
    padding: 10px 20px;
}
.course__info {
    display: flex;
    flex-direction: column;
    gap: 20px;
    font-size: 1.2rem;
}
.course__title {
    font-weight: 700;
}
.course__price {
    color: #ea922c;
}
.ruble {
    font-weight: 700;
}
.course__avatar {
    display: flex;
    justify-content: right;
}
.course__additional {
    display: flex;
    flex-direction: column;
    gap: 15px;
}
.course__additionals {
    font-size: .8rem;
    display: flex;
    align-items: center;
    gap: 10px;
    color: #828285;
}
.header{
  background-color: #424a5a;
}

.white {
  color: white;
  font-family: Arial, sans-serif;
}

.titles {
  text-align: center;
  margin: 0 auto;
  font-size: 200%;
  max-width: 700px;
  font-family: Arial, sans-serif;
}

.descs {
  text-align: center;
  margin: 0 auto;
  font-size: 120%;
  max-width: 700px;
  font-family: Arial, sans-serif;
}

.lessons {
  text-align: center;
  margin: 0 auto;
  font-size: 100%;
  max-width: 700px;
  font-family: Arial, sans-serif;
}

.def_text {
  text-align: center;
  margin: 0 auto;
  font-size: 110%;
  max-width: 700px;
  font-family: Arial, sans-serif;
}

.move_center {
  text-align: center;
  margin: 0 auto;
  max-width: 700px;
}

.move_left {
  display: flex;
  font-size: 110%;
  font-family: Arial, sans-serif;
}

.btn-container {
  text-align: center;
  display: inline-block;
  flex-wrap: wrap;
  display: flex;
  justify-content: center;
}

